# DB_Labs

./: README.md  Requirements for Labs
BackUp/: backup.sql
Lab3/: SQL3.sql  queries.sql  table_creation.sql  values_inertion.sql
Lab4/: lab4.sql
Lab5/: lab5.sql
Lab6/streaming/streaming/: settings.py  urls.py
Lab6/streaming/streaming_app/: apps.py  urls.py  views.py
Lab6/streaming_service/: pyproject.toml
Lab6/streaming_service/streaming/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
Lab6/streaming_service/streaming/migrations/: 0001_initial.py  0002_alter_tracks_options.py  0003_alter_albums_options_tracks_album_and_more.py  0005_albums_image.py
Lab6/streaming_service/streaming/static/streaming/css/: styles.css  track_styles.css
Lab6/streaming_service/streaming/static/streaming/js/: register.js  script.js
Lab6/streaming_service/streaming/templates/streaming/: albums.html  artists.html  base.html  create.html  delete.html  detail_album.html  detail_track.html  index.html  playlists.html  register.html  tracks.html
Lab6/streaming_service/streaming_service/: settings.py
